Fix release build: skip shim from JUnit subprojects + drop API-26+ stdlib calls
Three latent issues that surfaced on the 0.9.37 release run:

1. dta-sidekick-shim is Java-11-pinned with no test sources, but the
   root build.gradle's subprojects block forced JUnit Jupiter 6.0.3
   (Java 17+) onto every non-Android subproject. Adding tests to
   dta-sidekick made Gradle traverse the shim's testCompileClasspath
   during configuration cache serialization, which couldn't resolve
   junit-jupiter against a Java 11 target. Skip the shim from the
   subprojects block alongside the existing dta-sidekick / dta-plugin
   exclusions.

2. URLDecoder.decode(String, Charset) is API 33+; minSdk is 24. The
   String-charset-name overload (API 1+) does the same thing here.

3. java.nio.file.Files.readAllBytes / Files.write / File.toPath are
   API 26+; minSdk is 24. Read/write the interceptor-persistence file
   via FileInputStream / FileOutputStream instead of pulling in
   core-library desugaring for one call site.

Verified locally with `./gradlew build` — 161 tasks, all green.